# lulzcapita

./: .gitignore  Common.hs  DatabaseTools.hs  Experiments.hs  Nordnet.hs  PortfolioSink.hs  README.md  Sink.hs  User.hs  lulzcapita.cabal  lulzcapita.conf.example  nordnet.user.js  sink.conf.example
auth/: validate_doc_update.js
couchapp/: .couchappignore  .couchapprc
couchapp/views/balance/: map.js
couchapp/views/last_sync/: map.js  reduce.js
couchapp/views/portfolio_user/: map.js
couchapp/views/securities/: map.js
couchapp/views/stocks/: map.js
couchapp/views/unsupported/: map.js
couchapp/views/user_stocks/: map.js
couchapp/views/users/: map.js
couchapps/portfolio/: .couchapprc
couchapps/portfolio/views/lastsync/: map.js  reduce.js
couchapps/portfolio/views/stockusers/: map.js
couchapps/portfolio/views/userstocks/: map.js
couchapps/user/: .couchapprc
couchapps/user/views/portfolio/: map.js
portfolio_log/: README.md
src/: Main.hs
src/LulzCapita/: Common.hs  DatabaseTools.hs  PortfolioSink.hs  User.hs
src/LulzCapita/Bank/: Nordnet.hs
src/LulzCapita/Internal/: UTF8Parsec.hs
