name:                lulzcapita
version:             0.0.1
synopsis:            Social stock portfolio tracker
description:         LulzCapita is a collaborative stock portfolio tracker.
category:            Web
license:             GPL-3
license-file:        LICENSE
author:              Joel Lehtonen
maintainer:          joel.lehtonen@iki.fi
build-depends:       base
build-type:          Simple
cabal-version:       >= 1.2

Executable lulzcapita
  Hs-Source-Dirs:    src
  Main-Is:           Main.hs
  Build-Depends:
    parsec >= 3.1.2, network, json, CouchDB >= 0.11.1
