name:                lulzcapita
version:             0.0.1
synopsis:            Social stock portfolio tracker
description:         LulzCapita is a collaborative stock portfolio tracker.
category:            Web
license:             GPL-3
license-file:        LICENSE
author:              Joel Lehtonen
maintainer:          joel.lehtonen@iki.fi
build-type:          Simple
cabal-version:       >= 1.2
homepage:            http://capita.lulz.fi
source-repository head
  type:                git
  location:            git://github.com/zouppen/lulzcapita.git

Executable lulzcapita
  Hs-Source-Dirs:    src
  Main-Is:           Main.hs
  Build-Depends:
    base, parsec >= 3, json, network, CouchDB >= 0.11.1, MissingH, SHA, ConfigFile, bytestring, fastcgi, utf8-string, datetime

